fixing letter spacing for the magazine h2 as h3 style

--- a/docroot/themes/custom/ucsf_mag/scss/node/_node-magazine-article.scss
+++ b/docroot/themes/custom/ucsf_mag/scss/node/_node-magazine-article.scss
@@ -763,4 +763,10 @@ body.page-node-type-magazine-article {
       max-width: 100%;
     }
   }
+
+}
+
+.font-h3,
+h2.font-h3 {
+  letter-spacing: 0.4px;
 }
